--- a/src/ElmTest.Web/src/app/books-list-component/books-list.component.html
+++ b/src/ElmTest.Web/src/app/books-list-component/books-list.component.html
@@ -1,1 +1,19 @@
 <p>books-list-component works!</p>
+
+
+
+<div class="container-fluid">
+  <h3 class="mt-2 mb-1">
+    List of books | Lazy loading
+    <span style="font-size: 12px;">
+      <strong>({{books.length}} of {{totalCount}})</strong>
+    </span>
+  </h3>
+  <ul class="list-group mt-3"
+      style="overflow-y: auto;max-height:400px;">
+    <li class="list-group-item" *ngFor="let book of books">
+      <span><strong>{{book.bookTitle ? book.bookTitle : 'No Title entered'}}</strong></span>
+      <span>{{book.bookDescription  ? book.bookDescription : 'No Desc entered'}}</span>
+    </li>
+  </ul>
+</div>
