--- a/src/ElmTest.Web/src/app/books-list-component/books-list.component.html
+++ b/src/ElmTest.Web/src/app/books-list-component/books-list.component.html
@@ -171,13 +171,14 @@
   }
 
   .loadInnerContainer {
-    background-color: #3e94ec;
+    background-color: black;
     width: 90px;
+    text-align:center;
   }
 
   .loader {
     border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border-top: 16px solid white; /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
